@startuml EjoutiyaEcom_Final

skinparam classAttributeIconSize 0
hide circle

' =======================
' ENUMS
' =======================
enum Category {
  t_shirt
  hoodie
  pants
  sneakers
  accessories
}

enum OrderStatus {
  pending
  confirmed
  delivery
  rejected
}

enum ProductStatus {
  active
  out_of_stock
  hidden
}

enum StoreStatus {
  active
  suspended
  pending_approval
}

' =======================
' USER SYSTEM
' =======================
class User {
  -id: int
  -name: string
  -email: string
  -password: string
  -role: string
  
  -phone: string
  -city: string
  -zip_code: string
  -address: string
  
  -is_banned: boolean
}

class Client
class StoreOwner
class Admin {
  +banUser(userId: int)
  +unbanUser(userId: int)
}

User <|-- Client
User <|-- StoreOwner
User <|-- Admin

Admin --> User : ban / unban

' =======================
' STORE
' =======================
class Store {
  -id: int
  -user_id: int
  -store_name: string
  -bio: text
  -logo: string
  -hero_image: string
  -status: StoreStatus
}

StoreOwner "1" -- "0..1" Store : owns
Admin --> Store : approve / suspend

' =======================
' PRODUCT
' =======================
class Product {
  -id: int
  -store_id: int
  -name: string
  -description: string
  -price: decimal
  -stock: int
  -sizes: json
  -category: Category
  -status: ProductStatus
}

class ProductImage {
  -id: int
  -product_id: int
  -image_path: string
  -sort_order: int
}

Store "1" --> "0..*" Product
Product "1" --> "0..*" ProductImage : images

' =======================
' ORDER
' =======================
class Order {
  -id: int
  -client_id: int
  -status: OrderStatus
  -total_price: decimal
  -phone: string
  -city: string
  -zip_code: string
  -address: text
  -created_at: datetime
}

class OrderItem {
  -id: int
  -order_id: int
  -product_id: int
  -quantity: int
  -price: decimal
  -size: string
}

Client "1" --> "0..*" Order
Order "1" --> "0..*" OrderItem
OrderItem "*" --> "1" Product

' =======================
' CART
' =======================
class Cart {
  -id: int
  -client_id: int
  -created_at: datetime
}

class CartItem {
  -id: int
  -cart_id: int
  -product_id: int
  -quantity: int
  -size: string
}

Client "1" --> "0..1" Cart
Cart "1" --> "0..*" CartItem
CartItem "*" --> "1" Product

@enduml